events page is done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="siteNav">
         <img src="static/images/logo.png" alt="All Sports Logo" class="logo">
         <ul class="navlinks">
-            <li><a href="">New Pickup Game</a></li>
+            <li><a href="">New Events</a></li>
             <li><a href="">Login</a></li>
             <li><a href="">Signup</a></li>
         </ul>
@@ -26,11 +26,8 @@
     </nav>
 
     <main>
-        
-        <header class="pageHeader">
-            <h1>WELCOME TO ALL SPORTS</h1>
-        </header>
         <section class="content">
+            <h1>WELCOME TO ALL SPORTS</h1>
             <p>Find or create pickup games for your favorite sports. Join others in playing the game you 
                 love. We support any sport <br> category that cannot be played alone! </p>
             <p>Whether you are currently an athlete on a team or you do not have one and still want to play,
