--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="siteNav">
         <a href="index.html"><img src="static/images/logo.png" alt="All Sports Logo" class="logo"></a>
         <ul class="navlinks">
-            <li><a href="">New Events</a></li>
+            <li><a href="newEvent.html">New Events</a></li>
             <li><a href="">Login</a></li>
             <li><a href="">Signup</a></li>
         </ul>
