--- a/newEvent.html
+++ b/newEvent.html
@@ -31,20 +31,35 @@
             <h1 class="formHeading">CREATE EVENT</h1>
             
             <form action="" class="formContent">
-                <label for="Sport">Sport</label>
-                <input type="text" placeholder="Sport" name="Sport">
+                <label for="sport">Sport</label>
+                <input type="text" placeholder="Sport" name="sport">
 
-                <label for="Title">Title</label>
-                <input type="text" placeholder="Title" name="Title">
+                <label for="title">Title</label>
+                <input type="text" placeholder="Title" name="title">
 
-                <label for="Host">Host</label>
-                <input type="text" placeholder="Host" name="Host">
+                <label for="host">Host</label>
+                <input type="text" placeholder="Host" name="host">
 
-                <label for="Details">Details</label>
-                <input type="text" placeholder="Details" name="Details">
+                <label for="details">Details</label>
+                <textarea name="details" id="" rows="5"></textarea>
+
+                <label for="location">Where</label>
+                <input type="text" placeholder="Location" name="location">
+
+                <label for="date">When</label>
+                <input type="date" name="date">
+
+                <label for="start">Start</label>
+                <input type="time"  name="start">
+
+                <label for="end">End</label>
+                <input type="time"  name="end">
+
+                <label for="image">Where</label>
+                <input type="text" placeholder="imgURL" name="image">
 
                 <aside>
-                    <a class="createButton" href="events.html">Create</a>
+                    <a class="createButton" href="newEvent.html">Create</a>
                 </aside>
             </form>
                 
