fixed labels and inputs in new event

--- a/newEvent.html
+++ b/newEvent.html
@@ -30,33 +30,33 @@
         <section class="formContainer">
             <h1 class="formHeading">CREATE EVENT</h1>
             
-            <form action="" class="formContent">
+            <form action="#" class="formContent">
                 <label for="sport">Sport</label>
-                <input type="text" placeholder="Sport" name="sport">
+                <input type="text" placeholder="Sport" name="sport" id="sport">
 
                 <label for="title">Title</label>
-                <input type="text" placeholder="Title" name="title">
+                <input type="text" placeholder="Title" name="title" id="title">
 
                 <label for="host">Host</label>
-                <input type="text" placeholder="Host" name="host">
+                <input type="text" placeholder="Host" name="host" id="host">
 
                 <label for="details">Details</label>
-                <textarea name="details" id="" rows="5"></textarea>
+                <textarea name="details" id="details" rows="5"></textarea>
 
                 <label for="location">Where</label>
-                <input type="text" placeholder="Location" name="location">
+                <input type="text" placeholder="Location" name="location" id="location">
 
                 <label for="date">When</label>
-                <input type="date" name="date">
+                <input type="date" name="date" id="date">
 
                 <label for="start">Start</label>
-                <input type="time"  name="start">
+                <input type="time"  name="start" id="start">
 
                 <label for="end">End</label>
-                <input type="time"  name="end">
+                <input type="time"  name="end" id="end">
 
                 <label for="image">Where</label>
-                <input type="text" placeholder="imgURL" name="image">
+                <input type="text" placeholder="imgURL" name="image" id="image">
 
                 <aside>
                     <a class="createButton" href="newEvent.html">Create</a>
