--- a/newEvent.html
+++ b/newEvent.html
@@ -41,7 +41,7 @@
                 <input type="text" placeholder="Host" name="host" id="host">
 
                 <label for="details">Details</label>
-                <textarea name="details" id="details" rows="5"></textarea>
+                <textarea name="details" id="details" rows="5" placeholder="Description"></textarea>
 
                 <label for="location">Where</label>
                 <input type="text" placeholder="Location" name="location" id="location">
